WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
190289
[macOS] Fix some font attribute conversion bugs in preparation for "Font > Styles…" support in WebKit2
https://bugs.webkit.org/show_bug.cgi?id=190289
Summary
[macOS] Fix some font attribute conversion bugs in preparation for "Font > St...
Wenson Hsieh
Reported
2018-10-04 13:24:53 PDT
After fixing <
https://bugs.webkit.org/show_bug.cgi?id=146381
> locally (along with the "Styles…" and "Show Colors" options in the context menu), I noticed a couple of bugs in our font attribute conversion code: - Setting a font shadow with a blur radius of 0 and an offset of (X, Y) where X < 0 or Y < 0 does not work. - We hit a debug assertion when removing background text colors using the modal sheet presented via "Font > Styles…"
Attachments
Patch
(24.17 KB, patch)
2018-10-04 13:51 PDT
,
Wenson Hsieh
no flags
Details
Formatted Diff
Diff
Test tweak
(24.83 KB, patch)
2018-10-04 13:55 PDT
,
Wenson Hsieh
no flags
Details
Formatted Diff
Diff
Add rdar to ChangeLog
(25.55 KB, patch)
2018-10-04 13:59 PDT
,
Wenson Hsieh
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Wenson Hsieh
Comment 1
2018-10-04 13:25:28 PDT
...we can address these bugs in parallel.
Wenson Hsieh
Comment 2
2018-10-04 13:51:41 PDT
Created
attachment 351624
[details]
Patch
Wenson Hsieh
Comment 3
2018-10-04 13:55:11 PDT
Created
attachment 351625
[details]
Test tweak
Radar WebKit Bug Importer
Comment 4
2018-10-04 13:55:38 PDT
<
rdar://problem/45020807
>
Radar WebKit Bug Importer
Comment 5
2018-10-04 13:55:39 PDT
<
rdar://problem/45020806
>
Wenson Hsieh
Comment 6
2018-10-04 13:59:40 PDT
Created
attachment 351626
[details]
Add rdar to ChangeLog
Ryosuke Niwa
Comment 7
2018-10-04 14:52:36 PDT
Comment on
attachment 351626
[details]
Add rdar to ChangeLog View in context:
https://bugs.webkit.org/attachment.cgi?id=351626&action=review
Nice bug fixes!
> Source/WebCore/ChangeLog:19 > + Currently, we bail from adding a font shadow if the shadow's offset is empty. However, valid shadow offsets may > + have negative dimensions, so a check for `isZero()` should be used instead.
It's very strange / unintuitive that isEmpty() returns true for negative offsets...
> Source/WebCore/ChangeLog:26 > + transparent color (this scenario is exercised when using "Font > Stylesâ¦" to specify a font style without a
What's up with "â¦"?
Wenson Hsieh
Comment 8
2018-10-04 14:58:28 PDT
(In reply to Ryosuke Niwa from
comment #7
)
> Comment on
attachment 351626
[details]
> Add rdar to ChangeLog > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=351626&action=review
> > Nice bug fixes! > > > Source/WebCore/ChangeLog:19 > > + Currently, we bail from adding a font shadow if the shadow's offset is empty. However, valid shadow offsets may > > + have negative dimensions, so a check for `isZero()` should be used instead. > > It's very strange / unintuitive that isEmpty() returns true for negative > offsets...
Yeah... :/ I think this makes it easier than it should be to make this kind of mistake for FloatSizes that represent offsets, like this.
> > > Source/WebCore/ChangeLog:26 > > + transparent color (this scenario is exercised when using "Font > Stylesâ¦" to specify a font style without a > > What's up with "â¦"?
This is actually an ellipsis '…' character, but the Bugzilla patch review tool apparently displays this as "â¦". It looks normal outside of the Bugzilla patch review page.
WebKit Commit Bot
Comment 9
2018-10-04 15:09:00 PDT
Comment on
attachment 351626
[details]
Add rdar to ChangeLog Clearing flags on attachment: 351626 Committed
r236854
: <
https://trac.webkit.org/changeset/236854
>
WebKit Commit Bot
Comment 10
2018-10-04 15:09:02 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug